# OpenVidu3-Kurento

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  repo_cfg
cmake/: GolangSimple.cmake
debian/: changelog  control  copyright  lkendpoint.install  ov3endpoint-dev.install  ov3endpoint.install  rules
docker/: .env  docker-compose.yaml
docker/kurento/: Dockerfile
docker/rest/: Dockerfile  docker-buildx.yaml  repo_cfg
rest/: pom.xml
rest/src/main/java/com/naevatec/ov3/kurentofilter/: Ov3Filter.java
rest/src/main/java/com/naevatec/ov3/kurentofilter/config/: EnvironmentConfig.java  KmsConfig.java  SecurityConfig.java  SwaggerConfiguration.java
rest/src/main/resources/: application.properties
src/: CMakeLists.txt
src/go/: CMakeLists.txt  appwriter.go  go.mod  go.sum  libov3endpoint.h  ov3endpoint.go  ov3endpoint_test.go  ov3ingress.go  ov3publisher.go  ov3room.go  ov3root.go  ov3service.go  ov3subscriber.go  ov3subscription.go  ov3trackpublisher.go
src/gst-plugins/: CMakeLists.txt
src/gst-plugins/ov3endpoint/: CMakeLists.txt  ov3endpoint.c  ov3publisher.c  ov3publisher.h  ov3subscriber.c  ov3subscriber.h
src/server/: CMakeLists.txt
src/server/implementation/objects/: OV3PublisherImpl.cpp  OV3PublisherImpl.hpp  OV3SubscriberImpl.cpp  OV3SubscriberImpl.hpp
src/server/interface/: ov3endpoint.LiveKitPublisher.kmd.json  ov3endpoint.LiveKitSubscriber.kmd.json  ov3endpoint.OV3Publisher.kmd.json  ov3endpoint.kmd.json  package-lock.json  pom.xml
tests/: CMakeLists.txt
tests/server/: CMakeLists.txt  ov3Endpoint.cpp
(+5 files in other folders)
