include_directories(
  ${KMSCORE_INCLUDE_DIRS}
  ${KMS_ELEMENTS_INCLUDE_DIRS}
  ${KMSGSTCOMMONS_INCLUDE_DIRS}
  ${KmsRtpEndpointLib_INCLUDE_DIR}
  ${GSTREAMER_INCLUDE_DIRS}
  ${GSTREAMER_VIDEO_INCLUDE_DIRS}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
)


set(OV3_ENDPOINT_SOURCES
  ov3subscriber.c ov3subscriber.h
  ov3publisher.c ov3publisher.h
  ov3endpoint.c
)

add_library(kmsov3endpoint MODULE ${OV3_ENDPOINT_SOURCES})

add_dependencies(${LIBRARY_NAME} ov3endpoint)
target_link_libraries(${LIBRARY_NAME}
  ${KMSCORE_LIBRARIES}
  ${KMS_ELEMENTS_LIBRARIES}
  ${KMSGSTCOMMONS_LIBRARIES}
  ${GSTREAMER_LIBRARIES}
  ${GSTREAMER_VIDEO_LIBRARIES}
  -L${CMAKE_CURRENT_BINARY_DIR} -lov3endpoint
)

install(
  TARGETS kmsov3endpoint
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_GST_PLUGINS_DIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
